# obsidian.nvim

./: .gitignore  .gitmodules  .luacheckrc  .styluaignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASE_PROCESS.md  dev-requirements.txt  todays-date
.github/: CONTRIBUTING.md  RELEASE_PROCESS.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: changelog.yml  docs.yml  main.yml  panvimdoc.yml
after/plugin/: cmp_obsidian.lua  cmp_obsidian_new.lua
after/syntax/: markdown.vim  obsidian.vim
doc/: obsidian.nvim.txt  obsidian.txt  obsidian_api.txt
ftplugin/: markdown.vim
lua/: cmp_obsidian.lua  cmp_obsidian_new.lua  cmp_obsidian_tags.lua  plenary  yaml.lua
lua/obsidian/: abc.lua  async.lua  backlinks.lua  cache.lua  callbacks.lua  client.lua  collections.lua  command.lua  compat.lua  completion.lua  config.lua  echo.lua  img_paste.lua  init.lua  itertools.lua  location_list.lua  log.lua  mapping.lua  mappings.lua  note.lua  path.lua  picker_utils.lua  quickfix.lua  search.lua  templates.lua  test_logic.lua  threading.lua  ui.lua  util.lua  version.lua  workspace.lua  yaml.lua
scripts/: generate_api_docs.lua  minimal_init.vim  prepare_changelog.py  release.sh  release_notes.py
src/: client.rs  commands.rs  config.rs  error.rs  hlgroups.rs  lib.rs  messages.rs  note.rs  note_ref.rs  setup.rs  util.rs
src/commands/: mod.rs  obsidian_open.rs
test/: local.lua  minimal_init.vim
test/manual/: cache_spec.lua  client_spec.lua  note_spec.lua
test/obsidian/: async_spec.lua  client_spec.lua  collections_spec.lua  ui_spec.lua  (+10 more)
(+56 files in other folders)
