[package]
name = "obsidian"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi" }
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1"
serde_yaml = "0.9"
thiserror = "1.0"
unicode-segmentation = "1.9"
regex = "1.6"
lazy_static = "1.0"
